// file: proto/gcommon/v2/metrics/v2/open_telemetry_settings.proto
// version: 1.0.0
// guid: bc525cde-e766-4d2a-9ba9-d6383bdf2f6f

edition = "2023";

package metrics.v2;

import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/metricspb/v2";

message OpenTelemetrySettings {
  // OTLP endpoint
  string endpoint = 1 [(buf.validate.field).string.min_len = 1];

  // Whether to use TLS
  bool use_tls = 2;

  // Headers to include with requests
  map<string, string> headers = 3;

  // Resource attributes
  map<string, string> resource_attributes = 4;

  // Export timeout
  string timeout = 5 [(buf.validate.field).string.min_len = 1];
}
