// file: pkg/common/proto/types/key_value.proto
edition = "2023";

package gcommon.v1.common;

import "google/protobuf/go_features.proto";

option go_package = "../../../../pb;commonpb";
option features.(pb.go).api_level = API_HYBRID;

/**
 * Generic key-value pair for metadata and configuration storage.
 * Provides a simple, reusable structure for storing arbitrary
 * string-based key-value data across all GCommon modules.
 */
message KeyValue {
  // The key identifier for this pair
  string key = 1;

  // The value associated with the key
  string value = 2;
}
