// file: pkg/queue/proto/flush_queue_request.proto
// version: 1.1.0
// Request to flush queue messages to persistent storage

edition = "2023";

package gcommon.v1.queue;

import "google/protobuf/timestamp.proto";
import "pkg/queue/proto/flush_policy.proto";
option go_package = "github.com/jdfalk/gcommon/pkg/queue/proto";



// FlushQueueRequest forces queue messages to be flushed to persistent storage
message FlushQueueRequest {
  // Queue identifier to flush
  string queue_id = 1;

  // Flush policy to apply
  FlushPolicy flush_policy = 2;

  // Wait for flush completion before returning
  bool wait_for_completion = 3;

  // Maximum time to wait for flush completion (milliseconds)
  int32 timeout_ms = 4;

  // Flush only messages up to this timestamp
  google.protobuf.Timestamp flush_until = 5;

  // Include specific partitions only (empty = all partitions)
  repeated int32 partition_ids = 6;

  // Force flush even if not needed
  bool force_flush = 7;

  // Optional metadata for the flush operation
  map<string, string> metadata = 8;
}
